--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "geometry",
   "version": "0.0.1",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "license": "MIT",
   "files": [
     "dist"
